Fix text vertical align middle on safari

--- a/src/components/header/headerMobile.scss
+++ b/src/components/header/headerMobile.scss
@@ -14,16 +14,14 @@
 	/* Safari 7.1+ */
 	_::-webkit-full-page-media,
 	_:future,
-	:root .safari_only {
+	:root {
 		position: absolute;
 	}
 	/* Safari 10.1+*/
 
 	@media not all and (min-resolution: 0.001dpcm) {
 		@supports (-webkit-appearance: none) {
-			.safari_only {
-				position: absolute;
-			}
+			position: absolute;
 		}
 	}
 	.nav-button {
@@ -81,16 +79,14 @@
 		/* Safari 7.1+ */
 		_::-webkit-full-page-media,
 		_:future,
-		:root .safari_only {
+		:root {
 			top: 0;
 		}
 		/* Safari 10.1+*/
 
 		@media not all and (min-resolution: 0.001dpcm) {
 			@supports (-webkit-appearance: none) {
-				.safari_only {
-					top: 0;
-				}
+				top: 0;
 			}
 		}
 	}
